force-app/main/default/objects/Donor_Payment_Schedule__c/Donor_Payment_Schedule__c.object-meta.xml
<CustomObject>
    <label>Donor Payment Schedule</label>
    <nameField>
        <displayFormat>DPS-{00000}</displayFormat>
        <label>Donor Payment Schedule  Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Donor Payment Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>