force-app/main/default/objects/Donor_Payment_Schedule__c/fields/Concept_Note__c.field-meta.xml
<CustomField>
    <fullName>Concept_Note__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Concept Note</label>
    <referenceTo>Concept_Note__c</referenceTo>
    <relationshipLabel>Donor Payment Schedules</relationshipLabel>
    <relationshipName>Donor_Payment_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>