force-app/main/default/objects/Donor_Payment_Schedule__c/fields/Days_Delayed__c.field-meta.xml
<CustomField>
    <fullName>Days_Delayed__c</fullName>
    <label>Days Delayed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>