force-app/main/default/objects/Donor_Payment_Schedule__c/fields/Donor_Special_Condition__c.field-meta.xml
<CustomField>
    <fullName>Donor_Special_Condition__c</fullName>
    <label>Donor Special Condition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>