force-app/main/default/objects/Donor_Payment_Schedule__c/fields/Exchange_Amount__c.field-meta.xml
<CustomField>
    <fullName>Exchange_Amount__c</fullName>
    <formula>Amount_Due__c  *  Exchange_rate_to_GBP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exchange Amount</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>