force-app/main/default/objects/Donor_Payment_Schedule__c/fields/Exchange_rate_to_GBP__c.field-meta.xml
<CustomField>
    <fullName>Exchange_rate_to_GBP__c</fullName>
    <label>Exchange rate to GBP</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>