force-app/main/default/objects/Donor_Payment_Schedule__c/fields/Fund_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Fund_Allocation__c</fullName>
    <label>Fund Allocation</label>
    <referenceTo>Fund_Allocation__c</referenceTo>
    <relationshipLabel>Donor Payment Schedules</relationshipLabel>
    <relationshipName>Donor_Payment_Schedules</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>