force-app/main/default/objects/Donor_Payment_Schedule__c/fields/Supporting_Document_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Supporting_Document_Due_Date__c</fullName>
    <label>Supporting Document Due Date</label>
    <type>Date</type>
</CustomField>